--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 
 </head>
 <body>
-    <h1>Make sure autoplay is enabled!</h1>
+    <h1>Make sure autoplay is enabled! Fullscreen is preferred.</h1>
     <a href="1N.html">start</a>
+    <a href="about.html">about</a>
 </body>
 </html>
