--- a/1N.html
+++ b/1N.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div style="position: relative;">
-        <img class="image pixelated" src="images/1N.png">
+        <img class="image pixelated" src="images/1N.gif">
         <a href="1W.html"><div style="position: absolute; left: 0%; top: 0%; width: 12%; height: 100%; background-color: rgba(0,0,0,0);"></div></a>
         <a href="1E.html"><div style="position: absolute; left: 88%; top: 0%; width: 12%; height: 100%; background-color: rgba(0,0,0,0);"></div></a>
         <!-- <a href="4N.html"><div style="position: absolute; left: 18%; top: 0%; width: 64%; height: 100%; background-color: rgba(0,0,0,0);"></div></a> -->
