Added left/right dir on 1N

--- a/about.html
+++ b/about.html
@@ -9,5 +9,6 @@
     <h3>Second proof of concept HTML based point and click adventure game, more gif-based and (eventually) with interactive elements.</h3>
     <p>Created by Hyfudiar</p>
     <p>Inspired by the Mata Nui Online Game and old point and click adventure games.</p>
+    <a href="index.html">back</a>
 </body>
 </html>
