--- a/1N.html
+++ b/1N.html
@@ -9,8 +9,8 @@
 <body>
     <div style="position: relative;">
         <img class="image pixelated" src="images/1N.gif">
-        <a href="1W.html"><div style="position: absolute; left: 0%; top: 0%; width: 12%; height: 100%; background-color: rgba(0,0,0,0);"></div></a>
-        <a href="1E.html"><div style="position: absolute; left: 88%; top: 0%; width: 12%; height: 100%; background-color: rgba(0,0,0,0);"></div></a>
+        <a href="1W.html" class="leftdir"><div style="position: absolute; left: 0%; top: 0%; width: 12%; height: 100%; background-color: rgba(0,0,0,0);"></div></a>
+        <a href="1E.html" class="rightdir"><div style="position: absolute; left: 88%; top: 0%; width: 12%; height: 100%; background-color: rgba(0,0,0,0);"></div></a>
         <!-- <a href="4N.html"><div style="position: absolute; left: 18%; top: 0%; width: 64%; height: 100%; background-color: rgba(0,0,0,0);"></div></a> -->
     </div>
     <audio autoplay loop>
