--- a/1S.html
+++ b/1S.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>1N</title>
+    <title>1S</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -14,6 +14,6 @@
         <!-- <a href="4N.html"><div style="position: absolute; left: 18%; top: 0%; width: 64%; height: 100%; background-color: rgba(0,0,0,0);"></div></a> -->
     </div>
     <audio autoplay loop>
-        <source src="audio/1N.mp3" type="audio/mp3">    
+        <source src="audio/1S.mp3" type="audio/mp3">    
     </audio></body>
 </html>
