--- a/1W.html
+++ b/1W.html
@@ -9,9 +9,9 @@
 <body>
     <div style="position: relative;">
         <img class="image pixelated" src="images/1W.gif">
-        <a href="1S.html"><div style="position: absolute; left: 0%; top: 0%; width: 12%; height: 100%; background-color: rgba(0,0,0,0);"></div></a>
-        <a href="1N.html"><div style="position: absolute; left: 88%; top: 0%; width: 12%; height: 100%; background-color: rgba(0,0,0,0);"></div></a>
-        <a href="1Wx1.html"><div style="position: absolute; left: 18%; top: 0%; width: 64%; height: 100%; background-color: rgba(0,0,0,0);"></div></a>
+        <a href="1S.html" class="leftdir"><div style="position: absolute; left: 0%; top: 0%; width: 12%; height: 100%; background-color: rgba(0,0,0,0);"></div></a>
+        <a href="1N.html" class="rightdir"><div style="position: absolute; left: 88%; top: 0%; width: 12%; height: 100%; background-color: rgba(0,0,0,0);"></div></a>
+        <a href="1Wx1.html" class="forward"><div style="position: absolute; left: 18%; top: 0%; width: 64%; height: 100%; background-color: rgba(0,0,0,0);"></div></a>
     </div>
     <audio autoplay loop>
         <source src="audio/1W.mp3" type="audio/mp3">    
