--- a/1Wx3.html
+++ b/1Wx3.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>1N</title>
+    <title>1Wx3</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div style="position: relative;">
-        <img class="image pixelated" src="images/1N.png">
-        <a href="1W.html"><div style="position: absolute; left: 0%; top: 0%; width: 12%; height: 100%; background-color: rgba(0,0,0,0);"></div></a>
-        <a href="1E.html"><div style="position: absolute; left: 88%; top: 0%; width: 12%; height: 100%; background-color: rgba(0,0,0,0);"></div></a>
-        <!-- <a href="4N.html"><div style="position: absolute; left: 18%; top: 0%; width: 64%; height: 100%; background-color: rgba(0,0,0,0);"></div></a> -->
+        <img class="image pixelated" src="images/1Wx3.gif">
+        <!-- <a href="1W.html"><div style="position: absolute; left: 0%; top: 0%; width: 12%; height: 100%; background-color: rgba(0,0,0,0);"></div></a> -->
+        <a href="1Wx4.html" class="forward"><div style="position: absolute; left: 18%; top: 0%; width: 64%; height: 75%; background-color: rgba(0,0,0,0);"></div></a>
+        <a href="1Wx2.html" class="backout"><div style="position: absolute; left: 0%; top: 75%; width: 100%; height: 25%; background-color: rgba(0,0,0,0);"></div></a>
     </div>
     <audio autoplay loop>
-        <source src="audio/1N.mp3" type="audio/mp3">    
+        <source src="audio/1Wx3.mp3" type="audio/mp3">    
     </audio></body>
 </html>
