--- a/1Wx4.html
+++ b/1Wx4.html
@@ -11,6 +11,7 @@
         <img class="image pixelated" src="images/1Wx4.gif">
         <!-- <a href="1W.html"><div style="position: absolute; left: 0%; top: 0%; width: 12%; height: 100%; background-color: rgba(0,0,0,0);"></div></a>
         <a href="1E.html"><div style="position: absolute; left: 88%; top: 0%; width: 12%; height: 100%; background-color: rgba(0,0,0,0);"></div></a> -->
+        <img class="topimage pixelated" src="images/1Wx4Code.gif">
         <a href="1Wx3.html" class="backout"><div style="position: absolute; left: 0%; top: 75%; width: 100%; height: 25%; background-color: rgba(0,0,0,0);"></div></a>
     </div>
     <audio autoplay loop>
