E side path added, no lock

--- a/1E.html
+++ b/1E.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <div style="position: relative;">
-        <img class="image pixelated" src="images/1E.gif">
+        <img class="image pixelated" src="images/1Ev2.gif">
         <a href="1N.html"><div style="position: absolute; left: 0%; top: 0%; width: 12%; height: 100%; background-color: rgba(0,0,0,0);"></div></a>
         <a href="1S.html"><div style="position: absolute; left: 88%; top: 0%; width: 12%; height: 100%; background-color: rgba(0,0,0,0);"></div></a>
-        <!-- <a href="4N.html"><div style="position: absolute; left: 18%; top: 0%; width: 64%; height: 100%; background-color: rgba(0,0,0,0);"></div></a> -->
+        <a href="1Ex1.html"><div style="position: absolute; left: 18%; top: 0%; width: 64%; height: 100%; background-color: rgba(0,0,0,0);"></div></a> -->
     </div>
     <audio autoplay loop>
         <source src="audio/1E.mp3" type="audio/mp3">    
