--- a/1Ex2.html
+++ b/1Ex2.html
@@ -5,13 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>1Ex2</title>
     <link rel="stylesheet" href="style.css">
+    <script>
+        var password = "I54VA"
+        function pwcheck(){
+            if(document.getElementById('pass1').value == password){
+                console.log("successful")
+            }
+            else {
+                console.log("unsuccessful")
+                return false
+            }
+
+        }
+    </script>
 </head>
 <body>
     <div style="position: relative;">
         <img class="image pixelated" src="images/1Ex2.gif">
-        <!-- <a href="1W.html"><div style="position: absolute; left: 0%; top: 0%; width: 12%; height: 100%; background-color: rgba(0,0,0,0);"></div></a> -->
-        <a href="1ELocked.html" class="forward"><div style="position: absolute; left: 18%; top: 0%; width: 64%; height: 75%; background-color: rgba(0,0,0,0);"></div></a>
+        <!-- <a href="1W.html"><div style="position: absolute; left: 0%; top: 0%; width: 12%; height: 100%; background-color: rgba(0,0,0,0);"></div></a>
+        <a href="1ELocked.html" class="forward"><div style="position: absolute; left: 18%; top: 0%; width: 64%; height: 75%; background-color: rgba(0,0,0,0);"></div></a> -->
+
         <a href="1Ex1.html" class="backout"><div style="position: absolute; left: 0%; top: 75%; width: 100%; height: 25%; background-color: rgba(0,0,0,0);"></div></a>
+    </div>
+    <div id="pw1">
+        <form class="passform" action="1ELocked.html" onsubmit="return pwcheck()">
+            <input type="text" required id="pass1">
+            <input type="submit">
+        </form>
     </div>
     <audio autoplay loop>
         <source src="audio/1Ex2.mp3" type="audio/mp3">    
