tweaking submit button

--- a/1Ex2.html
+++ b/1Ex2.html
@@ -29,8 +29,8 @@
     </div>
     <div id="pw1">
         <form class="passform" action="1ELocked.html" onsubmit="return pwcheck()">
+            <input type="submit" value="^">
             <input type="text" required id="pass1">
-            <input type="submit">
         </form>
     </div>
     <audio autoplay loop>
