updated about page

--- a/about.html
+++ b/about.html
@@ -9,6 +9,8 @@
     <h3>Second proof of concept HTML based point and click adventure game, more gif-based and (eventually) with interactive elements.</h3>
     <p>Created by Hyfudiar</p>
     <p>Inspired by the Mata Nui Online Game and old point and click adventure games.</p>
+    <p>Also inspired by <a href="https://www.youtube.com/watch?v=3eFqbDFOV1c">this YouTube video</a> by "Lens & Paws". I like how they put a little bit of street ambience underneath the example photos. <br> 
+    I watched this video around the time I was watching a playthrough of MNOG and got inspired to make something like this.</p>
     <a href="index.html">back</a>
 </body>
 </html>
